--- a/public/index.html
+++ b/public/index.html
@@ -369,7 +369,10 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html#onboarding">
+											<div class="tabs__links"><a class="tabs__content-link" href="https://storage.yandexcloud.net/mp-hackathon/videos/onboarding-solutions.mp4">
+													<svg class="icon icon-sCases-video ">
+														<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
+													</svg><span>Защита решений по кейсу</span></a><a class="tabs__content-link" href="shortlist.html#onboarding">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -418,7 +421,10 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html#dashboard">
+											<div class="tabs__links"><a class="tabs__content-link" href="https://storage.yandexcloud.net/mp-hackathon/videos/dashboard-solutions.mp4" target="_blank">
+													<svg class="icon icon-sCases-video ">
+														<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
+													</svg><span>Защита решений по кейсу</span></a><a class="tabs__content-link" href="shortlist.html#dashboard">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -461,7 +467,10 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html#assistant">
+											<div class="tabs__links"><a class="tabs__content-link" href="https://storage.yandexcloud.net/mp-hackathon/videos/assistant-solutions.mp4" target="_blank">
+													<svg class="icon icon-sCases-video ">
+														<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
+													</svg><span>Защита решений по кейсу</span></a><a class="tabs__content-link" href="shortlist.html#assistant">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -525,7 +534,10 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html#tourism">
+											<div class="tabs__links"><a class="tabs__content-link" href="https://storage.yandexcloud.net/mp-hackathon/videos/assistant-solutions.mp4" target="_blank">
+													<svg class="icon icon-sCases-video ">
+														<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
+													</svg><span>Защита решений по кейсу</span></a><a class="tabs__content-link" href="shortlist.html#tourism">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
